# solo-cost

./: .gitignore  CHANGELOG.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.superpowers/sdd/: m2-acceptance.md  m3-acceptance.md  m4-acceptance.md
docs/superpowers/plans/: 2026-07-04-dashboard.md  (+7 more)
scripts/: package.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_projects_costs.sql  0003_people_contracts.sql  0004_projects_commission.sql  0005_modules.sql  0006_tasks_external_ref.sql  0007_clients.sql  0008_tasks_status_dates.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  backup.rs  categories.rs  clients.rs  companies.rs  costs.rs  dashboard.rs  members.rs  mod.rs  modules.rs  payments.rs  projects.rs  tasks.rs  timelogs.rs  trash.rs  zentao_import.rs
src-tauri/src/db/: migrations.rs  pool.rs
src-tauri/src/domain/: backup.rs  dashboard.rs  mod.rs  module_stats.rs  profit.rs  soft_delete.rs
src/i18n/: index.ts  zh-CN.json
src/lib/: brand.ts  ipc.ts  money.ts  status.ts  time.ts
src/routes/: categories.tsx  clients.tsx  companies.tsx  dashboard.tsx  login.tsx  members.tsx  settings.tsx  setup.tsx  trash.tsx
src/stores/: auth.ts  backup.ts  categories.ts  clients.ts  company.ts  costs.ts  dashboard.ts  financial.ts  members.ts  moduleStats.ts  modules.ts  payments.ts  projects.ts  tasks.ts  timelogs.ts  trash.ts
src/styles/: globals.css
src/types/: index.ts
(+24 files in other folders)
